fixed images appearing blurry on components case study

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1287,6 +1287,8 @@
           .case-study .main .project-details-components-details .image-holder {
             width: 100%; } }
         .case-study .main .project-details-components-details .image-holder img {
+          width: 100%;
+          max-width: 100%;
           height: 100%; }
     .case-study .main .project-details-finalWireframes.details-section {
       background-color: var(--active-secondary);
